opam-version: "1.2"
maintainer:   "anil@recoil.org"
authors:      "The MirageOS team"
homepage:     "https://github.com/mirage/mirage-platform"
bug-reports:  "https://github.com/mirage/mirage-platform/issues/"
dev-repo:     "https://github.com/mirage/mirage-platform.git"
license:      "part ISC, part LBPL-2.1 with OCaml linking ecxeption, part 3-clause BSD"

build:   [make "solo5-build"]
install: [make "solo5-install"   "PREFIX=%{prefix}%"]
remove:  [make "solo5-uninstall" "PREFIX=%{prefix}%"]

depends: [
  "cstruct" {>= "1.0.1"}
  "ocamlfind"
  "io-page" {>= "1.5.0"}
  "mirage-clock-xen" {>= "1.0.0"}
  "lwt" {>= "2.4.3"}
  "shared-memory-ring" {>= "1.0.0"}
  "conf-pkg-config"
  "mirage-profile" {>= "0.3"}
  "ocaml-freestanding"
]
available: [ ocaml-version >= "4.01.0" ]
