(library
 (name solo5_os)
 (public_name mirage-solo5)
 (private_modules lifecycle main memory time solo5)
 (libraries mirage-runtime bheap lwt cstruct metrics metrics-lwt duration)
 (no_dynlink)
 (foreign_archives mirage-solo5_bindings))

(rule
 (target libmirage-solo5_bindings.a)
 (deps
  (:dep libmirage-solo5_bindings.%{context_name}.a))
 (action
  (copy %{dep} %{target})))

(rule
 (enabled_if
  (= %{context_name} solo5))
 (target libmirage-solo5_bindings.solo5.a)
 (action
  (copy bindings/libmirage-solo5_bindings.a %{target})))

(rule
 (target libmirage-solo5_bindings.default.a)
 (action
  (copy stub/libmirage-solo5_bindings.a %{target})))

(include_subdirs unqualified)
