(executable
 (enabled_if
  (= %{context_name} solo5))
 (name main)
 (link_flags
  -cclib
  (:include solo5_abi_flag))
 (libraries mirage-solo5)
 (foreign_stubs
  (language c)
  (names manifest)))

(rule
 (targets manifest.c)
 (deps manifest.json)
 (action
  (run solo5-elftool gen-manifest manifest.json manifest.c)))

(rule
 (target mode)
 (deps
  (env_var MODE))
 (action
  (with-stdout-to
   %{target}
   (bash
     "if [ ! -z \"${MODE+x}\" ]; then echo -n \"$MODE\"; else echo -n \"hvt\"; fi"))))

(rule
 (target solo5_abi_flag)
 (deps mode)
 (action
  (with-stdout-to
   %{target}
   (bash "echo -n \"\\\"-z solo5-abi=\" && cat mode && echo -n \\\""))))

(rule
 (alias runtest)
 (enabled_if
  (= %{context_name} solo5))
 (action
  (with-accepted-exit-codes
   0
   (run "solo5-%{read:mode}" "%{dep:main.exe}"))))
