(rule (with-stdout-to cflags.sexp (run ./cflags.sh)))

(foreign_library
 (archive_name mirage-solo5_bindings)
 (language c)
 (names alloc_pages_stubs clock_stubs mm_stubs atomic_stubs cstruct_stubs
        solo5_block_stubs barrier_stubs main solo5_console_stubs checksum_stubs
        solo5_net_stubs)
 (flags (:include cflags.sexp) -O2 -std=c99 -Wall -Werror))
